# RustYoutubeUploader

./: .gitignore  Cargo.toml  README.md  test.xml
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml
src/: chromedriver.rs  cookies.rs  main.rs  video.rs
